# Ruff-Ruff-Rover

./: .gitignore  ROBOT_SETUP.md  WINDOWS_BRIDGE_SETUP.md  mic_whistle_ros2_node.py  whistle_detector.py
firmware/pico_micro_ros/: CMakeLists.txt  libmicroros  pico_uart_transport.c
firmware/pico_micro_ros/build_diag/: CMakeCache.txt  Makefile  cmake_install.cmake  pico_micro_ros.dis  pico_micro_ros.elf  pico_micro_ros.elf.map  pico_micro_ros.hex  pico_micro_ros.uf2
firmware/pico_micro_ros/build_diag/pico-sdk/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_diag/pico-sdk/docs/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/boot_picoboot_headers/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/boot_uf2_headers/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/hardware_claim/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/pico_base_headers/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/pico_binary_info/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/pico_stdlib_headers/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/pico_time/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/common/pico_util/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/rp2040/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S
firmware/pico_micro_ros/build_diag/pico-sdk/src/rp2040/hardware_regs/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/rp2040/hardware_structs/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/rp2040/pico_platform/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/src/rp2_common/cmsis/: Makefile
firmware/pico_micro_ros/build_diag/pico-sdk/tools/: Makefile
firmware/pico_micro_ros/build_transport_tx/: CMakeCache.txt  Makefile  cmake_install.cmake  pico_micro_ros.dis  pico_micro_ros.elf  pico_micro_ros.elf.map  pico_micro_ros.hex  pico_micro_ros.uf2
firmware/pico_micro_ros/build_transport_tx/pico-sdk/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_transport_tx/pico-sdk/docs/: Makefile
firmware/pico_micro_ros/build_transport_tx/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_transport_tx/pico-sdk/tools/: Makefile
firmware/pico_micro_ros/build_tx/: CMakeCache.txt  Makefile  cmake_install.cmake  pico_micro_ros.dis  pico_micro_ros.elf  pico_micro_ros.elf.map  pico_micro_ros.hex  pico_micro_ros.uf2
firmware/pico_micro_ros/build_tx/pico-sdk/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_tx/pico-sdk/docs/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_tx/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/build_tx/pico-sdk/tools/: Makefile  cmake_install.cmake
firmware/pico_micro_ros/src/: main.c  main_diag.c  main_transport_tx_test.c  main_usb_tx_test.c
src/rover_interfaces/: CMakeLists.txt  package.xml
src/rover_interfaces/msg/: TargetTrack.msg  WhistleEvent.msg
(+418 files in other folders)
